Changed to original navbar and fixed alignment text.

--- a/custom.css
+++ b/custom.css
@@ -83,9 +83,10 @@ h2{
     background-color: white;
     border: 2px solid #0012ab;
     border-radius: 50%;
-    max-width: 250px;
-    width:100%;
-    height: auto;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;  
+
 }
 
 /** Footer**/
